--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,12 @@ img {
 }
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
+    .box-width {
+        max-width: 250px;
+    }
+    #buttons-view {
+        max-width: 175px;
+    }
 
 }
 
